CHANGING THE BUTTON

--- a/style.css
+++ b/style.css
@@ -461,8 +461,15 @@ button {
       padding: 0 5%;
     }
 
+    .button-about {
+      font-size: 20px;
+      top: 70%;
+    }
+
+
     .button-about button{
       font-size: 20px;
+    
     }
 
     .button-backToAbout button{
@@ -483,7 +490,7 @@ button {
 
     .carousel-text{
       font-size: 15px;
-      top: 90%;
+      top: 80%;
       left: 0%;
       width: auto;
       justify-content: center;
