--- a/languages/language.css
+++ b/languages/language.css
@@ -19,7 +19,7 @@ body {
 
 .h1 {
   color: black;
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 
 .button-backToAllLanguages {
@@ -47,6 +47,7 @@ body {
 }
 
 .language-title {
+  font-family: 'Roboto', sans-serif;
   position: relative;
   color: white;
   font-size: 3rem;
@@ -57,6 +58,7 @@ body {
 }
 
 .language-text1 {
+  font-family: 'Roboto', sans-serif;
   padding: 0 15%;
   position: relative;
   color: white;
@@ -101,6 +103,7 @@ body {
   .button-backToAllLanguages {
       top: 5%;
       left: 50%;
+      max-width: 100%;
       
   }
   
@@ -110,7 +113,8 @@ body {
   }
   
   .language-text1 {
-      font-size: 0.5rem;
+    top: 35%;
+      font-size: 0.7rem;
   }
   
   .audio-player {
