--- a/style.css
+++ b/style.css
@@ -94,7 +94,7 @@ button {
 }
 
 .button-about button {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Orbitron', sans-serif;
   font-size: 1.5rem;
   padding: 10px 20px;
   z-index: 100;
@@ -135,7 +135,7 @@ button {
 }
   
 .button-backToAbout button {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Orbitron', sans-serif;
   font-size: 1.5rem;
   padding: 10px 20px;
   background-color: transparent;
