--- a/languages/language.css
+++ b/languages/language.css
@@ -49,7 +49,7 @@ body {
 }
 
 .button-backToAllLanguages button {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Orbitron', sans-serif;
   background-color: rgba(255, 255, 255, 0.1);
   color: #ffffff;
   border: 2px solid #ffffff;
@@ -79,6 +79,7 @@ body {
 }
 
 .audio-section, .links-section, .references-section {
+  font-family: 'Roboto', sans-serif;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -102,6 +103,7 @@ text-align: center;
 }
 
 .resources-list, .references-list {
+  font-family: 'Roboto', sans-serif;
   list-style-type: none;
   padding: 0;
   margin: 0;
