--- a/style.css
+++ b/style.css
@@ -193,11 +193,10 @@ button {
 }
 
 
-
 .carousel-item {
   --items: 8;
-  --width: clamp(150px, 30vw,  300px);
-  --height: clamp(150px, 30vw,  300px);
+  --width: clamp(150px, 30vw, 300px);
+  --height: clamp(150px, 30vw, 300px);
   --x: calc(var(--active) * 1000%);
   --y: calc(var(--active) * 200%);
   --rot: calc(var(--active) * 360deg);
@@ -208,202 +207,197 @@ button {
   width: var(--width);
   height: var(--height);
   margin: calc(var(--height) * -0.5) 0 0 calc(var(--width) * -0.5);
-  border-radius: 10px;
+  border-radius: 50%;
   top: 50%;
   left: 50%;
   user-select: none;
   transform-origin: 0% 100%;
-  box-shadow: 0 10px 50px 10px rgba(0, 0, 0, .5);
-  /* background: rgb(0, 0, 0); */
+  box-shadow: 0 10px 50px 10px rgba(0, 0, 0, 0.5);
   pointer-events: all;
-  transform:  translate(var(--x), var(--y)) rotate(var(--rot)) ;
-  transition: transform .8s cubic-bezier(0, 0.02, 0, 1);
-  border-radius: 50%;
-
-  .carousel-box {
-    position: absolute;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;           /* Using flexbox */
-    align-items: center;     /* Center vertically */
-    justify-content: center; /* Center horizontally */
-    transition: opacity .8s cubic-bezier(0, 0.02, 0, 1);
-    opacity: var(--opacity);
-    font-family: 'Orelo-sw-db', serif;
-
-
-    &:before {
-      content: '';
-      position: absolute;
-      z-index: -1;  /* Make sure the overlay is behind the content */
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: linear-gradient(to bottom, rgba(0, 0, 0, .3), rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, .5));
-    }
-  }
-
-
-    .title {
-      font-family: 'Roboto', sans-serif;
-      position: absolute;
-      z-index: 1;
-      top: 20%;
-      color: #fff;
-      justify-content: center;
-      text-align: center;
-      transition: opacity .8s cubic-bezier(0, 0.02, 0, 1);
-      font-size: clamp(20px, 3vw, 30px);
-      text-shadow: 0 4px 4px rgba(0, 0, 0, .1);
-    }
-  
-    .region {
-      font-family: 'Roboto', sans-serif;
-      position: absolute;
-      z-index: 1;
-      padding: 0 10%;
-      top: 40%;
-      justify-content: center;
-      text-align: center;
-      color: #fff;
-      transition: opacity .8s cubic-bezier(0, 0.02, 0, 1);
-      font-size: clamp(15px, 3vw, 20px);
-    }
-
-    .speakers {
-      font-family: 'Roboto', sans-serif;
-      position: absolute;
-      z-index: 1;
-      color: #fff;
-      top: 70%;
-      display: flex;           /* Using flexbox */
-      align-items: center;     /* Center vertically */
-      justify-content: center; /* Center horizontally */
-      transition: opacity .8s cubic-bezier(0, 0.02, 0, 1);
-      font-size: clamp(15px, 3vw, 10px);
-    }
-  
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      pointer-events: none;
-    }
-  }
-  
-  .layout {
-    position: absolute;
-    z-index: 0;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-  
-    &:before {
-      content: '';
-      position: absolute;
-      z-index: 1;
-      top: 0;
-      left: 90px;
-      width: 10px;
-      height: 100%;
-      border: 1px solid #fff;
-      border-top: none;
-      border-bottom: none;
-      opacity: .15;
-    }
-  
-    .box {
-      position: absolute;
-      bottom: 0;
-      left: 30px;
-      color: #fff;
-      transform-origin: 0% 10%;
-      transform: rotate(-90deg);
-      font-size: 9px;
-      line-height: 1.4;
-      text-transform: uppercase;
-      opacity: .4;
-    }
-  }
-  
-  .logo {
-    position: absolute;
-    z-index: 2;
-    top: 28px;
-    right: 28px;
-    width: 30px;
-    height: 30px;
-    background: #fff;
-    border-radius: 50%;
-    opacity: .5;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Orelo-sw-db', serif;
-    pointer-events: all;
-    color: black;
-    text-decoration: none;
-    font-size: 20px;
-    overflow: hidden;
-    padding-bottom: .1em;
-  }
-  
-  .social {
-    position: absolute;
-    z-index: 10;
-    bottom: 20px;
-    right: 25px;
-    color: #fff;
-    opacity: .4;
-  
-    a {
-      display: inline-block;
-      margin-left: 3px;
-    }
-  
-    svg {
-      --fill: #fff;
-      width: 35px;
-      height: 35px;
-    }
-  }
-  
-  .cursor {
-    position: fixed;
-    z-index: 10;
-    top: 0;
-    left: 0;
-    --size: 40px;
-    width: var(--size);
-    height: var(--size);
-    border-radius: 50%;
-    border: 1px solid rgba(255, 255, 255, .2);
-    margin: calc(var(--size) * -0.5) 0 0 calc(var(--size) * -0.5);
-    transition: transform .85s cubic-bezier(0, 0.02, 0, 1);
-    display: none;
-    pointer-events: none;
-    
-    @media (pointer: fine) {
-      display: block;
-    }
-  }
-  
-  .cursor2 {
-    --size: 2px;
-    transition-duration: .7s;
-  }
-
-  .carousel-item.highlight {
-    border: 2px solid red; /* Example: Add a red border or other styling */
-    transform: scale(1.1);
-    z-index: 1000;
+  transform: translate(var(--x), var(--y)) rotate(var(--rot));
+  transition: transform 0.8s cubic-bezier(0, 0.02, 0, 1);
 }
+
+
+
+.carousel-box {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;           /* Using flexbox */
+  align-items: center;     /* Center vertically */
+  justify-content: center; /* Center horizontally */
+  transition: opacity 0.8s cubic-bezier(0, 0.02, 0, 1);
+  opacity: var(--opacity);
+  font-family: 'Orelo-sw-db', serif;
+}
+
+.carousel-box:before {
+  content: '';
+  position: absolute;
+  z-index: -1;  /* Make sure the overlay is behind the content */
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.5));
+}
+
+.carousel-box .title {
+  font-family: 'Roboto', sans-serif;
+  position: absolute;
+  z-index: 1;
+  top: 20%;
+  color: #fff;
+  justify-content: center;
+  text-align: center;
+  transition: opacity 0.8s cubic-bezier(0, 0.02, 0, 1);
+  font-size: clamp(20px, 3vw, 30px);
+  text-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);
+}
+
+.carousel-box .region {
+  font-family: 'Roboto', sans-serif;
+  position: absolute;
+  z-index: 1;
+  padding: 0 10%;
+  top: 40%;
+  justify-content: center;
+  text-align: center;
+  color: #fff;
+  transition: opacity 0.8s cubic-bezier(0, 0.02, 0, 1);
+  font-size: clamp(15px, 3vw, 20px);
+}
+
+.carousel-box .speakers {
+  font-family: 'Roboto', sans-serif;
+  position: absolute;
+  z-index: 1;
+  color: #fff;
+  top: 70%;
+  display: flex;           /* Using flexbox */
+  align-items: center;     /* Center vertically */
+  justify-content: center; /* Center horizontally */
+  transition: opacity 0.8s cubic-bezier(0, 0.02, 0, 1);
+  font-size: clamp(15px, 3vw, 10px);
+}
+
+.carousel-box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  pointer-events: none;
+}
+
+.layout {
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+}
+
+.layout:before {
+  content: '';
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 90px;
+  width: 10px;
+  height: 100%;
+  border: 1px solid #fff;
+  border-top: none;
+  border-bottom: none;
+  opacity: 0.15;
+}
+
+.layout .box {
+  position: absolute;
+  bottom: 0;
+  left: 30px;
+  color: #fff;
+  transform-origin: 0% 10%;
+  transform: rotate(-90deg);
+  font-size: 9px;
+  line-height: 1.4;
+  text-transform: uppercase;
+  opacity: 0.4;
+}
+
+.logo {
+  position: absolute;
+  z-index: 2;
+  top: 28px;
+  right: 28px;
+  width: 30px;
+  height: 30px;
+  background: #fff;
+  border-radius: 50%;
+  opacity: 0.5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Orelo-sw-db', serif;
+  pointer-events: all;
+  color: black;
+  text-decoration: none;
+  font-size: 20px;
+  overflow: hidden;
+  padding-bottom: 0.1em;
+}
+
+.social {
+  position: absolute;
+  z-index: 10;
+  bottom: 20px;
+  right: 25px;
+  color: #fff;
+  opacity: 0.4;
+}
+
+.social a {
+  display: inline-block;
+  margin-left: 3px;
+}
+
+.social svg {
+  --fill: #fff;
+  width: 35px;
+  height: 35px;
+}
+
+.cursor {
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  --size: 40px;
+  width: var(--size);
+  height: var(--size);
+  border-radius: 50%;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  margin: calc(var(--size) * -0.5) 0 0 calc(var(--size) * -0.5);
+  transition: transform 0.85s cubic-bezier(0, 0.02, 0, 1);
+  display: none;
+  pointer-events: none;
+}
+
+@media (pointer: fine) {
+  .cursor {
+    display: block;
+  }
+}
+
+.cursor2 {
+  --size: 2px;
+  transition-duration: 0.7s;
+}
+
 
 @media (max-width: 768px) {
   .title, .region, .speakers {
